--- a/package.json
+++ b/package.json
@@ -6,13 +6,25 @@
   "scripts": {
     "server": "serve ./src",
     "open": "cypress open",
-    "running": "cypress run"
+    "running": "cypress run",
+    "eslint": "eslint src --fix",
+    "eslintrunning": "eslint src ",
+    "prettier": "prettier src --write",
+    "prettierrunnig": "prettier src --check"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "cypress": "^8.0.0",
+    "eslint": "^7.31.0",
+    "eslint-config-standard": "^16.0.3",
+    "eslint-plugin-import": "^2.23.4",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^5.1.0",
     "serve": "^12.0.0"
+  },
+  "dependencies": {
+    "prettier": "^2.3.2"
   }
 }
