--- a/package.json
+++ b/package.json
@@ -11,14 +11,7 @@
     "eslintrunning": "eslint src ",
     "prettier": "prettier src --write",
     "prettierrunnig": "prettier src --check",
-    "prettierall": "prettier src",
-    "prettier-format": "prettier src/**/*.{js,html} --write"
-  },
-  "prettier": {
-    "semi": true,
-    "trailingComma": "none",
-    "singleQuote": true,
-    "printWidth": 80
+    "prettierall": "prettier src"
   },
   "keywords": [],
   "author": "",
@@ -26,6 +19,7 @@
   "devDependencies": {
     "cypress": "^8.0.0",
     "eslint": "^7.31.0",
+    "eslint-config-prettier": "^8.3.0",
     "eslint-config-standard": "^16.0.3",
     "eslint-plugin-import": "^2.23.4",
     "eslint-plugin-node": "^11.1.0",
